# essaybuddy

./: .gitignore  README.md  env.sample  pyproject.toml  requirements.txt
essaybuddy/: essaybuddy.toml  essaylib.py  essaytxt.py  llmlib.py  main.py  message_parser.py  output.txt
essaybuddy/prompts/: completion_check.py  essay.py
tests/: test_config.py  test_llmlib.py  test_message_parser.py  test_option_validation.py
