[tool.poetry]
name = "essaybuddy"
version = "0.1.0"
description = ""
authors = ["Michael Aguilar <bitflip@slowlink.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.36.0"
openai = "^1.35.3"
tomlkit = "^0.12.5"
nltk = "^3.8.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["temporal-samples-python"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101",
    "D201",
    "D202",
    "RET504", # ignore assignment right before return
    "PGH003", # ignore general mypy type: ignore
    "PTH123", # ignore Path.open
    "FA102",  # ignore annotation warning, we require v3.10
    "ANN102", # ignore `cls` annotations
    "TD002",
    "TD003",
    "FIX002", # ignore TODO details
    "S101",   # ignore asserts
    "ANN204", # ignore __init__ return type
    "UP032",
    "G001",   # I like str.format
    "TRY003", # Ignore long exception messages
    "D104",
    "D100",   # Ignore docstring for __init__.py, __main__.py
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*" = ["ANN", "D", "I"]

[tool.pytest.ini_options]
pythonpath = [".", "./essaybuddy", "./tests"]
